# djingo

./: .env.example  .gitignore  pyproject.toml
bingo/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
bingo/migrations/: 0001_initial.py  0002_bingoboarditem_approved_and_more.py  0002_gameevent.py  0003_alter_bingoboarditem_suggested_by.py  0003_bingogame_board_size_bingogame_win_condition.py  0004_bingogame_name.py  0004_update_existing_games_for_variations.py  0005_bingogame_is_private.py  0006_remove_player_unique_player_name_per_game.py  0007_gameevent.py  0008_feedback.py  0009_bingogame_is_spectateable.py
bingo/templatetags/: bingo_tags.py
djingo/: asgi.py  manage.py  settings.py  test_settings.py  wsgi.py
djingo/bingo/: admin.py  api_views.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  views.py
djingo/djingo/: asgi.py  settings.py  urls.py
djingo/templates/admin/bingo/bingoboard/: change_form.html  import.html
djingo/templates/bingo/: base.html  home.html  join_game.html  login.html  play_game.html
static/admin/css/: custom.css
static/bingo/css/: style.css
static/bingo/js/: script.js
templates/admin/bingo/: review_suggestions.html
templates/admin/bingo/bingoboard/: add_form.html  import.html
templates/admin/bingo/bingogame/: change_form.html
templates/admin/bingo/partials/: suggestion_list.html
templates/bingo/: base.html  create_game.html  home.html  join_game.html  play_game.html  spectate.html
templates/bingo/partials/: bingo_board.html  bingo_cell.html  confirm_abandon_board_modal.html  event_item.html  feedback_accepted.html  feedback_form.html  game_events.html  inactive_game_modal.html  modal.html  share_game.html  sidebar.html  suggestions_modal.html  winner_modal.html
