[project]
name = "djingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.2.0",
    "channels-redis>=4.2.1",
    "django>=5.1.6",
    "redis>=5.2.1",
    "daphne>=4.1.2",
    "djangorestframework>=3.15.2",
    "whitenoise>=6.9.0",
    "django-charsleft-widget",
]

[tool.uv.sources]
django-charsleft-widget = { git = "https://github.com/timmyomahony/django-charsleft-widget.git" }
