[project]
name = "djingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-ipware>=7.0.1",
    "channels>=4.2.0",
    "channels-redis>=4.2.1",
    "django>=5.1.6",
    "redis>=5.2.1",
    "daphne>=4.1.2",
    "djangorestframework>=3.15.2",
    "whitenoise>=6.9.0",
    "django-charsleft-widget",
    "django-qr-code>=4.1.0",
    "django-crispy-forms>=2.3",
    "python-dotenv>=1.0.0",
    "crispy-bootstrap5>=2025.6",
]

[tool.uv.sources]
django-charsleft-widget = { git = "https://github.com/timmyomahony/django-charsleft-widget.git" }
