[project]
name = "djingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "crispy-bootstrap5>=2025.6",
    "daphne>=4.2.1",
    "django>=6.0.2",
    "django-charsleft-widget>=1.0.0",
    "django-crispy-forms>=2.5",
    "django-ipware>=7.0.1",
    "django-qr-code>=4.2.0",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "taskipy>=1.14.1",
    "whitenoise>=6.11.0",
]

[tool.taskipy.tasks]
run = "uv run daphne djingo.asgi:application -p 8300"
